--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Django==5.1.6
 django-cleanup==6.0.0
 django-froala-editor==4.0.14
 djangorestframework==3.15.2
+gunicorn==23.0.0
+packaging==24.2
 Pillow==9.4.0
 pycodestyle==2.8.0
 sqlparse==0.4.2
