--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
 asgiref==3.8.1
 autopep8==1.6.0
+Brotli==1.1.0
+click==8.1.8
+dj-database-url==2.3.0
 Django==5.1.6
 django-cleanup==6.0.0
 django-froala-editor==4.0.14
 djangorestframework==3.15.2
+gunicorn==23.0.0
+h11==0.14.0
+packaging==24.2
 Pillow==9.4.0
+psycopg2-binary==2.9.10
 pycodestyle==2.8.0
 sqlparse==0.4.2
 toml==0.10.2
+typing_extensions==4.12.2
 tzdata==2022.1
+uvicorn==0.34.0
+whitenoise==6.9.0
