--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,13 @@
 databases:
   - name: eLMSdb
     plan: free
-    databaseName: eLMS
-    user: eLMS
+    databaseName: mysite
+    user: mysite
 
 services:
   - type: web
     plan: free
-    name: eLMS
+    name: mysite
     runtime: python
     buildCommand: "./build.sh"
     startCommand: "python -m gunicorn eLMS.asgi:application -k uvicorn.workers.UvicornWorker"
