--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ databases:
 services:
   - type: web
     plan: free
-    name: mysite
+    name: elMS
     runtime: python
     buildCommand: "./build.sh"
     startCommand: "python -m gunicorn eLMS.asgi:application -k uvicorn.workers.UvicornWorker"
